--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ dash-bootstrap-components = "*"
 gunicorn = "*"
 plotly = "*"
 pandas = "*"
+joblib = "*"
+scikit-learn = "*"
 
 [requires]
 python_version = "3"
