--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,9 @@ dash-bootstrap-components = "*"
 gunicorn = "*"
 plotly = "*"
 pandas = "*"
-joblib = "*"
-scikit-learn = "*"
+joblib = "==0.14.1"
+scikit-learn = "==0.22.1"
+dash-daq = "*"
 
 [requires]
 python_version = "3"
